@@ -5,6 +5,7 @@ Version 7.1.1
 - Updated Log4j2 documentation to refer to the Thread Context rather than the MDC. (thanks grobmeier)
 - Fix duplicate ShutdownHook warnings in ``raven-log4j2``.
 - Add way to override how remote addresses are resolved (RemoteAddressResolver interface). (thanks j-fernandes)
+- Add way to set ``serverName`` statically in configuration. (thanks mattbillenstein)
 
 Version 7.1.0
 -------------
